--- a/w15_shopping_cart/src/App.css
+++ b/w15_shopping_cart/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap");
 /* font-family: "MuseoModerno", sans-serif; */
 
 * {
@@ -58,6 +58,14 @@ h1 {
   justify-content: center;
 }
 
+.empty {
+  height: 60px;
+  padding: 20px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+}
+
 .logo {
   font-family: "MuseoModerno", sans-serif;
   font-size: 20px;
@@ -94,6 +102,8 @@ h1 {
   padding: 10px 30px;
   height: 100px;
   display: flex;
+  border-bottom: 1px solid #f9f4f4;
+  margin: 0px 10px;
 }
 
 .product_image {
@@ -106,3 +116,68 @@ h1 {
   object-fit: cover;
 }
 
+.description {
+  padding-top: 5px;
+  margin-right: 60px;
+  min-width: 120px;
+}
+
+.description span {
+  display: block;
+  margin-top: 5px;
+  font-size: 14px;
+}
+
+.description span:last-child {
+  margin-top: 8px;
+  color: #86939e;
+}
+
+.quantity {
+  padding-top: 20px;
+  margin-right: 60px;
+}
+
+.quantity input {
+  border: none;
+  text-align: center;
+  width: 32px;
+  font-weight: 300;
+  font-size: 16px;
+  background-color: white;
+}
+
+.plus-btn,
+.minus-btn {
+  width: 25px;
+  height: 25px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+.plus-btn img {
+  margin-top: 3px;
+}
+
+.minus-btn img {
+  margin-bottom: 3px;
+}
+
+.total-price {
+  width: 83px;
+  padding-top: 20px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.remove {
+  position: relative;
+  padding-top: 18px;
+  margin-left: 60px;
+}
+
+.remove img {
+  cursor: pointer;
+}
